// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Express v5 Migration combined migration should update both package.json and server.ts 1`] = `
"
import express from 'express';

export function app(): express.Express {
  const server = express();

  server.get(/.*\\..*/, express.static('./browser', { maxAge: '1y' }));

  server.get(/.*/, (req, res) => {
    res.render('index', { req });
  });

  return server;
}
"
`;

exports[`Express v5 Migration server.ts file updates should handle double quotes in wildcard strings 1`] = `
"
import express from 'express';

export function app(): express.Express {
  const server = express();

  server.get(/.*\\..*/, express.static('./browser', { maxAge: '1y' }));

  server.get(/.*/, (req, res) => {
    res.render('index', { req });
  });

  return server;
}
"
`;

exports[`Express v5 Migration server.ts file updates should handle multiline server.get calls with double quotes 1`] = `
"
import express from 'express';

export function app(): express.Express {
  const server = express();

  server.get(
    /.*\\..*/,
    express.static('./browser', { maxAge: '1y' })
  );

  server.get(
    /.*/,
    (req, res) => {
      res.render('index', { req });
    }
  );

  return server;
}
"
`;

exports[`Express v5 Migration server.ts file updates should handle multiline server.get calls with wildcard patterns 1`] = `
"
import express from 'express';

export function app(): express.Express {
  const server = express();

  server.get(
    /.*\\..*/,
    express.static('./browser', { maxAge: '1y' })
  );

  server.get(
    /.*/,
    (req, res) => {
      res.render('index', { req });
    }
  );

  return server;
}
"
`;

exports[`Express v5 Migration server.ts file updates should handle server.ts with only one wildcard pattern 1`] = `
"
import express from 'express';

export function app(): express.Express {
  const server = express();

  server.get(/.*/, (req, res) => {
    res.render('index', { req });
  });

  return server;
}
"
`;

exports[`Express v5 Migration server.ts file updates should handle server.ts with only wildcard dot pattern 1`] = `
"
import express from 'express';

export function app(): express.Express {
  const server = express();

  server.get(/.*\\..*/, express.static('./browser', { maxAge: '1y' }));

  return server;
}
"
`;

exports[`Express v5 Migration server.ts file updates should not modify server.ts if already updated 1`] = `
"
import express from 'express';

export function app(): express.Express {
  const server = express();

  server.get(/.*\\..*/, express.static('./browser', { maxAge: '1y' }));

  server.get(/.*/, (req, res) => {
    res.render('index', { req });
  });

  return server;
}
"
`;

exports[`Express v5 Migration server.ts file updates should replace wildcard strings with regex patterns in src/server.ts 1`] = `
"
import express from 'express';

export function app(): express.Express {
  const server = express();

  server.get(/.*\\..*/, express.static('./browser', { maxAge: '1y' }));

  server.get(/.*/, (req, res) => {
    res.render('index', { req });
  });

  return server;
}
"
`;

exports[`Express v5 Migration server.ts file updates should update server.ts when Express instance name differs from server 1`] = `
"
import express from 'express';

export function app(): express.Express {
  const appServer = express();

  appServer.get(/.*\\..*/, express.static('./browser', { maxAge: '1y' }));

  appServer.get(/.*/, (req, res) => {
    res.render('index', { req });
  });

  return appServer;
}
"
`;
